<resources>
    <string name="app_name">Lantoon</string>
    <string name="btn_create_account">CREATE ACCOUNT</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_login_with_facebook">Login with Facebook</string>
    <string name="btn_login_with_google">Login with Google+</string>
    <string name="btn_login_with_apple">Login with Apple</string>
    <string name="btn_forgot_password">Forgot Password ?</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_cnf_password">Confirm Password</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="title_create_account">CREATE ACCOUNT</string>
    <string name="title_profile">PROFILE</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="title_forget_password">FORGET PASSWORD</string>
    <string name="user_login">USER LOGIN</string>
    <string name="new_learner">NEW LEARNER</string>
    <string name="level_test">LEVEL TEST</string>
    <string name="i_know">I KNOW</string>
    <string name="i_want_to_learn">I WANT TO LEARN</string>
    <string name="choose_your_path">CHOOSE YOUR PATH</string>
    <string name="casual">CASUAL</string>
    <string name="casual_mins">5 MIN /DAY</string>
    <string name="regular">REGULAR</string>
    <string name="regular_mins">10 MIN /DAY</string>
    <string name="intense">INTENSE</string>
    <string name="intense_mins">15 MIN /DAY</string>

    <string name="facebook_app_id">2469067720054810</string>
    <string name="fb_login_protocol_scheme">fb2469067720054810</string>
    <string name="server_client_id">1043113693911-5hptj4dndtdvhruks8o828f0nmmh9fad.apps.googleusercontent.com</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_profile">PROFILE</string>
    <string name="menu_change_password">CHANGE PASSWORD</string>
    <string name="menu_new_language">MY LANGUAGES</string>
    <string name="menu_payment">PAYMENT</string>
    <string name="menu_share">SHARE</string>
    <string name="menu_signout">SIGN OUT</string>

    <!-- Bottom Navigation -->
    <string name="title_lesson">HOME</string>
    <string name="title_leader">LEADERBOARD</string>
    <string name="title_target">TARGETS</string>
    <string name="title_setting">SETTING</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="empty_username_password">Please enter Username and Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="tab_text_1">L1</string>
    <string name="tab_text_2">P1</string>
    <string name="successfully_completed_the_lesson">You have successfully completed the Lesson</string>
    <string name="successfully_completed_the_chapter">You have successfully completed the Chapter</string>
    <string name="enter_email_id_msg">Enter the Email id Registered with your account</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_Old_password">Enter Your Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="btn_update_profile">UPDATE</string>
    <string name="title_select_language">SUPPORT LANGUAGE</string>
    <string name="choose_your_language">CHOOSE YOUR LANGUAGE</string>
    <string name="ad_signout_msg">Are you sure you want to sign out ?</string>
    <string name="ad_home_button_pressed_msg">Are you sure you want to exit ?</string>
    <string name="ad_back_button_pressed_msg">Are you sure you want to exit App?</string>
    <string name="ad_permission_storage_msg">Storage permission needed for accessing photos</string>
    <string name="ad_permission_storage_audio_msg">Storage and audio permission needed</string>
    <string name="ad_permission_audio_msg">Audio permission needed</string>

    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="btn_change">CHANGE</string>
    <string name="validate">VALIDATE</string>
    <string name="submit">SUBMIT</string>
    <string name="completed">COMPLETED</string>
    <string name="ongoing">ONGOING</string>
    <string name="upcoming">UPCOMING</string>
    <string name="title_login">LOGIN</string>
    <string name="msg_network_failed">N/W Connection Failed</string>
    <string name="moretextsample">sadfsdhfsdgafjksdhakfjshdadgdgdfgdfgdfgdfgdfgdfgdfgdfgkjfhsadfsdaf</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_exit">EXIT</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="msg_update_app_alert">Please update app to continue.</string>
    <string name="btm_nav_title_home">Home</string>
    <string name="btm_nav_title_target">Targets</string>
    <string name="btm_nav_title_leaderboard">Leaderboard</string>
    <string name="btm_nav_title_reference_language">Language</string>

    <string-array name="duration_array">
        <item>CASUAL (5 MIN /DAY)</item>
        <item>REGULAR (10 MIN /DAY)</item>
        <item>INTENSE (15 MIN /DAY)</item>
    </string-array>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="tap_to_speak">Tap to Speak</string>

    <!--payU-->
    <string name="some_error_occurred">Some error occurred...</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>
    <string name="pay_via_si">Pay using SI</string>
    <string name="billingCycle">billingCycle</string>
    <string name="api_version">api_version</string>
    <string name="si">si</string>
    <string name="billingInterval">billingInterval</string>
    <string name="billingAmount">billingAmount</string>
    <string name="billingCurrency">billingCurrency</string>
    <string name="paymentStartDate">paymentStartDate</string>
    <string name="paymentEndDate">paymentEndDate</string>
    <string name="remarks">remarks</string>
    <string name="si_date_hint">YYYY-MM-DD</string>
    <string name="free_trial">Free Trial</string>
    <string name="billingRule">billingRule</string>
    <string name="billingLimit">billingLimit</string>
    <string name="custom_note">Custom Note</string>
    <string name="custom_note_category">Note Category</string>
</resources>