<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".login.ui.login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/top_bg"
        android:gravity="top"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_forget_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/llForgetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/img_forget_password" />

        <TextView
            android:id="@+id/tvForgetPasswordMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/enter_email_id_msg"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/etForgetPasswordEmail"
            style="@style/AppEditTextStyle"
            android:layout_marginTop="@dimen/_40sdp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:visibility="visible" />

        <com.bazinga.lantoon.login.forget.ui.OtpEditText
            android:id="@+id/etForgetPasswordOtp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/etForgetPasswordPassword"
                style="@style/AppEditTextStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etForgetPasswordCnfPassword"
                style="@style/AppEditTextStyle"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"/>
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendOtp"
            style="@style/AppButtonStyle"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/send_otp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnValidate"
            style="@style/AppButtonStyle"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/validate"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/AppButtonStyle"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/submit"
            android:visibility="gone" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_64sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>