<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".registration.SignupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/top_bg"
        android:gravity="top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_fullname"
                android:inputType="textPersonName"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_15ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hint_mobile_number"
                    android:inputType="phone"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="8"
                android:textSize="@dimen/_15ssp" />

            <EditText
                android:id="@+id/etCnfPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/edittext_bg"
                android:gravity="center"
                android:hint="@string/hint_cnf_password"
                android:inputType="textPassword"
                android:maxLength="8"
                android:textSize="@dimen/_15ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/button_bg"
                android:text="@string/btn_signup"
                android:textSize="@dimen/_18ssp"
                app:backgroundTint="@null" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="Or"
                android:textSize="@dimen/_15ssp" />

            <FrameLayout
                android:id="@+id/flFacebookLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnFb"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFbLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/fb_color"
                    android:drawableLeft="@drawable/ic_fb"
                    android:text="@string/btn_login_with_facebook"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_15ssp"
                    app:backgroundTint="@null" />
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoogleLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/google_color"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/btn_login_with_google"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                app:backgroundTint="@null" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Back to  "
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:id="@+id/tvBackToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

