<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".login.ui.login.LoginActivity">


    <LinearLayout
        android:id="@+id/lllogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/globe_art" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:src="@drawable/logo" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            style="@style/AppEditTextStyle"
            android:layout_marginTop="@dimen/_40sdp"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/AppEditTextStyle"
            android:layout_marginTop="@dimen/_30sdp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginStart="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:background="@drawable/button_bg"
            android:enabled="false"
            android:text="@string/btn_login"
            android:textSize="@dimen/_15ssp"
            app:backgroundTint="@null" />


        <FrameLayout
            android:id="@+id/flFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnFb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFbLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/fb_color"
                android:drawableLeft="@drawable/ic_fb"
                android:text="@string/btn_login_with_facebook"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp"
                app:backgroundTint="@null" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/google_color"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/btn_login_with_google"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:backgroundTint="@null" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_64sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lllogin"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/lllogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />
</androidx.constraintlayout.widget.ConstraintLayout>